# d3b

./: .gitattributes  CMakeLists.txt  Makefile  README.md  main.cpp
cmake/: setup_boost.cmake  setup_googletest.cmake
d3b/: CMakeLists.txt  d3b_manager.cpp  d3b_manager.hpp  db_interface.hpp  file_io_interface.hpp  manager.cpp  manager.hpp  options.cpp  options.hpp  types.hpp
d3b/detail/: misc_helpers.hpp
test/: CMakeLists.txt  test_d3b_manager.cpp
test/test_files/: test_one_entry_d3b.d3b
